versioned_docs/version-7.1.0/api/along.mdx
---
title: along
---

import * as turf from "turf-next";
import ExampleMap from "@site/src/components/ExampleMap";
import WindowTurfGlobal from "@site/src/components/WindowTurfGlobal";
import BrowserOnly from "@docusaurus/BrowserOnly";

<!-- Expose turf as global var for experimenting in the browser console -->

<BrowserOnly>{() => <WindowTurfGlobal turf={turf} />}</BrowserOnly>

### Description

Takes a [LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4) and returns a [Point](https://tools.ietf.org/html/rfc7946#section-3.1.2) at a specified distance along the line.

### Parameters

| Name                  | Type                                                                                                                              | Description                                                            |
| --------------------- | --------------------------------------------------------------------------------------------------------------------------------- | ---------------------------------------------------------------------- |
| line                  | **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[LineString](https://tools.ietf.org/html/rfc7946#section-3.1.4)\>** | input line                                                             |
| distance              | **number**                                                                                                                        | distance along the line                                                |
| options<i>?</i>       | **Object**                                                                                                                        | Optional parameters                                                    |
| options.units<i>?</i> | **string**                                                                                                                        | can be degrees, radians, miles, or kilometers _(default "kilometers")_ |

### Returns

<ul>
  **[Feature](https://tools.ietf.org/html/rfc7946#section-3.2)\<[Point](https://tools.ietf.org/html/rfc7946#section-3.1.2)\>** Point `distance` `units` along the line

</ul>

### Examples

```javascript
var line = turf.lineString([
  [-83, 30],
  [-84, 36],
  [-78, 41],
]);
var options = { units: "miles" };

var along = turf.along(line, 200, options);
```

```javascript live
function Map() {
  var point = turf.point([-90.54863, 14.616599]);
  var buffered = turf.buffer(point, 500, { units: "miles" });

  console.log(buffered);

  return <ExampleMap addToMap={{ point, buffered }} />;
}
```

### Installation

```javascript
$ npm install @turf/along

import { along } from "@turf/along";
const result = along(...);
```

```javascript
$ npm install @turf/turf

import * as turf from "@turf/turf";
const result = turf.along(...);
```
